# replicreator

./: README.md  pyproject.toml  setup.cfg
demos/: .gitignore  generate_app.py  generate_web_app.py  parameters.yaml  replicator_parameters.yaml  replicreator_parameters.yaml
demos/transcriptions/: scene_I_1.txt  scene_I_2.txt
res/: template_app.html  template_python_main_script.py
src/replicator/: app.py  main.py
src/replicator/util/: parameters_loading.py
src/replicreator/: app.py
