[metadata]
name = replicreator
description = Web app generator for learning theatrical lines.
long_description = file: README.md
author = Benjamin Maréchal
author_email = irmo322@gmail.com
#url =
license = TODO

[options]
python_requires = >=3.8
setup_requires =
    setuptools_scm
zip_safe = False
packages = find:
package_dir=
    =src
install_requires =
    pyyaml
    cerberus

[options.packages.find]
where = src

# [options.extras_require]
# docs =
#     sphinx
#     sphinx-autoapi
#     sphinx_rtd_theme
# demos =
#     matplotlib
